TEST_PROGRAMS/VALID/shabbir_hussain/prog3.min
var z: int; var l: string;

x = 2;

y = 3; z = 4;

