TEST_PROGRAMS/INVALID/jonathan_campbell/3.min
var x : int;

x = x + 2;

var y : int;

y = y + 2;
